# ritebook

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.e2e  README.md  pyproject.toml  ritebook.toml
.agents/skills/add-hexagonal-feature/: SKILL.md
.agents/skills/bootstrap-python-app/: SKILL.md
.agents/skills/format-python-code/: SKILL.md
.agents/skills/lint-python-code/: SKILL.md
.agents/skills/local-using-agent-skills/: SKILL.md
.agents/skills/planning-and-task-breakdown/: SKILL.md
.agents/skills/python-add-adapter/: SKILL.md
.agents/skills/python-add-env-settings-adapter/: SKILL.md
.agents/skills/python-add-env-settings-adapter/assets/: app_settings.template.py  env_settings_adapter_init.template.py  env_settings_adapter_settings.template.py  test_app_settings.template.py  test_env_settings.template.py
.agents/skills/python-add-port/: SKILL.md
.agents/skills/run-local-quality-gate/: SKILL.md
.agents/skills/run-python-tests/: SKILL.md
.agents/skills/spec-driven-development/: SKILL.md
.agents/skills/split-python-module/: SKILL.md
.agents/skills/using-agent-skills/: SKILL.md
.agents/skills/write-pytest-tests/: SKILL.md
.agents/skills/write-python-docstrings/: SKILL.md
.clinerules/: 000-readme.md  001-cline-operating-guidance.md  002-core-standards.md  003-architecture-guardrails.md  004-testing-standards.md  005-docs-and-adr.md  006-module-structure.md  007-performance-and-observability.md  008-configuration-and-secrets.md  009-repo-navigation.md  010-pr-and-commit-hygiene.md  011-tooling-and-ci.md  012-documentation-standards.md  013-logging-conventions.md  014-project-tooling-override.md  999-command-execution-safety.md
.clinerules/workflows/: improve.md  update-repo-navigation.md
.github/workflows/: ci-cd.yaml  docker-e2e.yaml
docs/adr/: 0001-source-provenance-and-trust.md  README.md
docs/ideas/: internal-skill-distribution.md  limit-skill-directory-depth.md  upstream-skill-contributions.md
docs/plans/: architecture-hardening-plan.md  consumer-git-index-registry-plan.md  docker-e2e-integration-testing-plan.md  install-skill-plan.md  list-skills-plan.md  publisher-index-generation-plan.md  schema-v1-catalog-path-constraints-plan.md  spec-audit-remediation-plan.md  upstream-skill-contributions-implementation-plan.md
docs/specs/: README.md  consumer-git-index-registry-spec.md  consumer-git-index-registry.md  docker-e2e-integration-testing-spec.md  docker-e2e-testing-spec.md  index-registry-spec.md  install-skill-spec.md  linter-spec.md  list-skills-spec.md  publisher-index-generation-plan.md  publisher-index-generation-spec.md  publisher-index-generation.md  publisher-spec.md  shared-catalog-contract-spec.md  skill-contribution-spec.md  skill-installation-spec.md  upstream-skill-contributions-spec.md
scripts/: sync-clinerules.sh
src/ritebook/: __init__.py  cli.py
src/ritebook/adapters/: __init__.py
src/ritebook/adapters/inbound/: __init__.py
src/ritebook/adapters/outbound/: __init__.py
src/ritebook/features/index_registry/: __init__.py
src/ritebook/features/skill_contribution/: __init__.py
src/ritebook/features/skill_installation/: __init__.py
src/ritebook/shared_kernel/: __init__.py  catalog_paths.py  git_sources.py  identifiers.py  skill_package.py  text_safety.py
tests/: __init__.py
tests/e2e/: conftest.py  test_cli_workflows.py  test_container_environment.py  test_skill_contribution_workflow.py
tests/integration/: __init__.py  conftest.py  test_adapter_integrations.py
tests/unit/: __init__.py  test_cli.py  test_package_metadata.py
tests/unit/adapters/outbound/: __init__.py  test_filesystem_discovery.py  test_filesystem_frontmatter.py
tests/unit/features/index_registry/: __init__.py
tests/unit/features/skill_contribution/: __init__.py
tests/unit/shared_kernel/: __init__.py  test_catalog_paths.py
(+238 files in other folders)
