[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ritebook"
version = "0.1.0"
description = "A minimal placeholder package for the future Ritebook project."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Ondřej Winter" },
]
keywords = ["ritebook"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
ritebook = "ritebook.cli:main"

[project.urls]
Homepage = "https://github.com/ondrej-winter/ritebook"
Repository = "https://github.com/ondrej-winter/ritebook"
Issues = "https://github.com/ondrej-winter/ritebook/issues"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ritebook"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [".agents"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["ritebook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
