[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ritebook"
version = "0.1.38"
description = "A minimal placeholder package for the future Ritebook project."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Ondřej Winter" },
]
keywords = ["ritebook"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
ritebook = "ritebook.cli:main"

[project.urls]
Homepage = "https://github.com/ondrej-winter/ritebook"
Repository = "https://github.com/ondrej-winter/ritebook"
Issues = "https://github.com/ondrej-winter/ritebook/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.1",
    "python-semantic-release>=10.6.1",
    "ruff>=0.12.2",
    "ty>=0.0.1a23",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ritebook"]

[tool.semantic_release]
build_command = "uv build"
commit_message = "release: bump version to {version}"
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog.default_templates]
output_format = ""

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [".agents"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D101", "D102", "D103", "D107", "DTZ001", "PLR0913", "PLR2004", "S101", "S108"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["src/ritebook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: black-box end-to-end tests that exercise the real CLI and external process boundaries",
    "integration: adapter integration tests that exercise real local I/O boundaries",
]
